--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: "개발 공부 합니다"
 email: shgh2233@gmail.com
 description: "공부한 내용을 기록합니다" #>- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://joshow.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 github_username: joshow
 
 # Build settings
