--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: "개발 공부 합니다"
+title: "공부내용 기록"
 email: shgh2233@gmail.com
 description: "공부한 내용을 기록합니다" #>- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
